commit translated contents

--- a/articles/governance/policy/toc.yml
+++ b/articles/governance/policy/toc.yml
@@ -48,28 +48,28 @@ items:
       items:
       - name: Använd taggen och dess standardvärde
         displayName: append, builtin, concat
-        href: samples/apply-tag-def-val.md
+        href: samples/apply-tag-default-value.md
       - name: Principinitiativ för faktureringstaggar
-        href: samples/billing-tags-policy-init.md
+        href: samples/billing-tags-policy-initiative.md
       - name: Framtvinga tagg och dess värde
         displayName: deny, concat, builtin
-        href: samples/enforce-tag-val.md
+        href: samples/enforce-tag-value.md
       - name: Lägg till tagg och dess värde i resursgrupper
         displayName: deny, concat
-        href: samples/enforce-tag-rg.md
+        href: samples/enforce-tag-on-resource-groups.md
     - name: Platser
       items:
       - name: Tillåtna platser
         displayName: deny, builtin, location
-        href: samples/allowed-locs.md
+        href: samples/allowed-locations.md
     - name: Resurstyper
       items:
       - name: Tillåtna resurstyper
         displayName: deny, builtin, resourceTypes
-        href: samples/allowed-res-types.md
+        href: samples/allowed-resource-types.md
       - name: Otillåtna resurstyper
         displayName: deny, builtin, resourceTypes
-        href: samples/not-allowed-res-type.md
+        href: samples/not-allowed-resource-types.md
   - name: Compute
     items:
     - name: Virtuella datorer
@@ -85,10 +85,10 @@ items:
         href: samples/allowed-custom-images.md
       - name: Granska om ej tillgängligt tillägg
         displayName: auditIfNotExists
-        href: samples/audit-ext-not-exist.md
+        href: samples/audit-extension-not-exist.md
       - name: Otillåtna VM-tillägg
         displayName: deny
-        href: samples/not-allowed-vm-ext.md
+        href: samples/not-allowed-vm-extension.md
     - name: Skalningsuppsättningar för virtuella datorer
       items:
       - name: Granska när VM inte använder hanterad disk
@@ -107,12 +107,12 @@ items:
     items:
     - name: Kräv kryptering för Data Lake Store
       displayName: deny
-      href: samples/enforce-datalakestore-encryption.md
+      href: samples/enforce-data-lake-store-encryption.md
   - name: Övervakning
     items:
     - name: Granska diagnostikinställning
       displayName: auditIfNotExists, resourceTypes
-      href: samples/audit-diag-setting.md
+      href: samples/audit-diagnostic-setting.md
   - name: Nätverk
     items:
     - name: Nätverksgränssnitt
@@ -130,13 +130,19 @@ items:
       items:
       - name: Tillåtna SKU:er för programgateway
         displayName: deny
-        href: samples/allowed-app-gate-sku.md
+        href: samples/allowed-app-gateway-sku.md
+      - name: Tillåtna vNet-gateway SKU:er
+        displayName: deny
+        href: samples/allowed-vnet-gateway-sku.md
+      - name: Tillåtna SKU:er för lastbalanserare
+        displayName: deny
+        href: samples/allowed-load-balancer-skus.md
       - name: Ingen nätverkspeering till ER-nätverk
         displayName: deny, all, concat, ExistingResourceGroups
-        href: samples/no-peering-er-net.md
+        href: samples/no-peering-express-route-network.md
       - name: Ingen användardefinierad routningstabell
         displayName: deny, all
-        href: samples/no-user-def-route-table.md
+        href: samples/no-user-defined-route-table.md
       - name: NSG x i varje undernät
         displayName: deny, all
         href: samples/nsg-on-subnet.md
@@ -158,23 +164,23 @@ items:
       items:
       - name: Tillåten ExpressRoute-bandbredd
         displayName: deny
-        href: samples/allowed-er-band.md
+        href: samples/allowed-express-route-bandwidth.md
       - name: Tillåtna ExpressRoute-SKU:er
         displayName: deny
-        href: samples/allowed-er-skus.md
-      - name: Tillåten peeringplats för ExpressRoute
+        href: samples/allowed-express-route-skus.md
+      - name: Tillåtna Express Route-peeringplatser
         displayName: deny, Location
-        href: samples/allowed-peering-er.md
+        href: samples/allowed-express-route-peering.md
     - name: Nätverksbevakare
       items:
       - name: Granska om Network Watcher inte är aktiverat för regionen
         displayName: auditIfNotExists, Location
-        href: samples/net-watch-not-enabled.md
+        href: samples/network-watcher-not-enabled.md
     - name: Programgateways
       items:
       - name: Tillåtna SKU:er för programgateway
         displayName: deny
-        href: samples/allowed-app-gate-sku.md
+        href: samples/allowed-app-gateway-sku.md
   - name: SQL
     items:
     - name: SQL Servrar
@@ -184,16 +190,16 @@ items:
         href: samples/audit-no-aad-admin.md
       - name: Granska inställningar för hotidentifiering på servernivå
         displayName: auditIfNotExists
-        href: samples/audit-sql-ser-threat-det-setting.md
+        href: samples/audit-sql-server-threat-detection-setting.md
       - name: Granska granskningsinställningar för SQL Server
         displayName: auditIfNotExists, builtin
         href: samples/sql-server-audit.md
       - name: Granska granskningsinställningar på SQL-servernivå
         displayName: auditIfNotExists
-        href: samples/audit-sql-ser-leve-audit-setting.md
+        href: samples/audit-sql-server-audit-setting.md
       - name: Kräv SQL Server version 12.0
         displayName: deny, builtin
-        href: samples/req-sql-12.md
+        href: samples/require-sql-12.md
     - name: SQL Databases
       items:
       - name: Tillåtna SKU:er för SQL DB
@@ -201,7 +207,7 @@ items:
         href: samples/allowed-sql-db-skus.md
       - name: Granska SQL DB-nivå för hotidentifiering på servernivå
         displayName: auditIfNotExists
-        href: samples/audit-db-threat-det-setting.md
+        href: samples/audit-db-threat-detection-setting.md
       - name: Granska SQL DB-kryptering
         displayName: auditIfNotExists, disabled, indexed, builtin
         href: samples/sql-database-encryption-audit.md
@@ -215,19 +221,19 @@ items:
       href: samples/allowed-skus-storage.md
     - name: Tillåtna SKU:er för lagringskonto
       displayName: deny, builtin, storageSKUs
-      href: samples/allowed-stor-acct-skus.md
+      href: samples/allowed-storage-account-skus.md
     - name: Neka lågfrekvent åtkomstnivå för lagringskonton
       displayName: deny, all
       href: samples/deny-cool-access-tiering.md
     - name: Garantera endast HTTPS-trafik för lagringskonto
       displayName: deny, all
-      href: samples/ensure-https-stor-acct.md
+      href: samples/ensure-https-storage-account.md
     - name: Garantera kryptering för lagringsfil
       displayName: deny, all
-      href: samples/ensure-store-file-enc.md
+      href: samples/ensure-storage-file-encryption.md
     - name: Kräver kryptering för lagringskonto
       displayName: deny, builtin
-      href: samples/req-store-acct-enc.md
+      href: samples/require-storage-account-encryption.md
 - name: Begrepp
   items:
   - name: Azure Policy-definitionsstruktur
@@ -246,7 +252,7 @@ items:
     href: ./how-to/programmatically-create.md
   - name: Hämta data för efterlevnad
     displayName: evaluation, scan, summarize, query, events, log analytics
-    href: ./how-to/getting-compliance-data.md
+    href: ./how-to/get-compliance-data.md
   - name: Åtgärda icke-kompatibla resurser
     displayName: managed identity, task, definition, roleDefinitionIds
     href: ./how-to/remediate-resources.md
@@ -302,9 +308,9 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: UserVoice
     href: https://feedback.azure.com/forums/915958-azure-governance
-ms.openlocfilehash: 6bb656f390ad7f0e3ead1928476cdbe3845be633
-ms.sourcegitcommit: 333d4246f62b858e376dcdcda789ecbc0c93cd92
+ms.openlocfilehash: 6b71365c05180db643bfc9a693f40db97dd89729
+ms.sourcegitcommit: eb9dd01614b8e95ebc06139c72fa563b25dc6d13
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/01/2018
-ms.locfileid: "52725921"
+ms.lasthandoff: 12/12/2018
+ms.locfileid: "53312552"
