--- a/articles/active-directory/manage-apps/toc.yml
+++ b/articles/active-directory/manage-apps/toc.yml
@@ -7,7 +7,7 @@ items:
     href: what-is-application-management.md
 - name: Snabbstarter
   items:
-  - name: Lägg till ett program – portalen
+  - name: Lägga till ett galleriprogram – portalen
     href: add-application-portal.md
   - name: Visa klientorganisationsappar – portalen
     href: view-applications-portal.md
@@ -16,6 +16,8 @@ items:
   items:
   - name: Konfigurera enkel inloggning – portalen
     href: configure-single-sign-on-portal.md
+  - name: Lägga till ett lokalt program – portalen
+    href: application-proxy-add-on-premises-application.md
 - name: Begrepp
   items:
   - name: Planera integration av en molnapp
@@ -86,10 +88,6 @@ items:
       href: change-name-or-logo-portal.md
   - name: Integration av en lokal app
     items:
-    - name: Aktivera Application Proxy
-      href: application-proxy-enable.md
-    - name: Publicera app för fjärråtkomst
-      href: application-proxy-publish-azure-portal.md
     - name: Konfigurera anslutningsappar
       href: application-proxy-configure-connectors-with-proxy-servers.md
     - name: Konfigurera anspråksmedvetna appar
@@ -284,9 +282,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azure-active-directory
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=active-directory
-ms.openlocfilehash: ff883fd034f3ceabc556071d7a9e8f40d87fc75d
-ms.sourcegitcommit: 11d8ce8cd720a1ec6ca130e118489c6459e04114
+ms.openlocfilehash: 0d2f830cd3f5e66c69ae5f839c8f536747ce4d36
+ms.sourcegitcommit: 78ec955e8cdbfa01b0fa9bdd99659b3f64932bba
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/04/2018
-ms.locfileid: "52848169"
+ms.lasthandoff: 12/10/2018
+ms.locfileid: "53141908"
