--- a/articles/active-directory/users-groups-roles/TOC.yml
+++ b/articles/active-directory/users-groups-roles/TOC.yml
@@ -100,7 +100,7 @@ items:
       items:
       - name: Skapa en dynamisk grupp
         href: groups-create-rule.md
-      - name: Regelsyntax och egenskaper
+      - name: Dynamiska gruppregler
         href: groups-dynamic-membership.md
       - name: Ändra typ av gruppmedlemskap
         href: groups-change-type.md
@@ -120,11 +120,11 @@ items:
       href: licensing-group-advanced.md
     - name: Grupplicenser med PowerShell
       href: licensing-ps-examples.md
-    - name: Referens för produkt- och tjänstabonnemang
+    - name: ID:n för produkt- och tjänstabonnemang
       href: licensing-service-plan-reference.md
   - name: Azure AD-administratörsroller
     items:
-    - name: Referens för roller och behörigheter
+    - name: Roller och behörigheter
       href: directory-assign-admin-roles.md
     - name: Visa och tilldela roller
       href: directory-manage-roles-portal.md
@@ -142,7 +142,7 @@ items:
     items:
     - name: Integrera LinkedIn med Azure AD
       href: linkedin-integration.md
-    - name: Användarmedgivande och delning av data
+    - name: Datadelning för LinkedIn
       href: linkedin-user-consent.md
   - name: Felsöka
     items:
@@ -161,9 +161,9 @@ items:
     href: https://docs.microsoft.com/cli/azure/ad
   - name: Azure AD PowerShell för Graph
     href: https://docs.microsoft.com/powershell/azure/active-directory/install-adv2?view=azureadps-2.0
-ms.openlocfilehash: 23625fb345d3d27b5966be3a193e21b46408c525
-ms.sourcegitcommit: 5a1d601f01444be7d9f405df18c57be0316a1c79
+ms.openlocfilehash: e2244b8058c53ff8d921bc54bfed71d6fe4d0df9
+ms.sourcegitcommit: 78ec955e8cdbfa01b0fa9bdd99659b3f64932bba
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/10/2018
-ms.locfileid: "51514222"
+ms.lasthandoff: 12/10/2018
+ms.locfileid: "53133578"
