--- a/articles/app-service/containers/toc.yml
+++ b/articles/app-service/containers/toc.yml
@@ -42,6 +42,8 @@ items:
       href: tutorial-nodejs-mongodb-app.md
     - name: Python med Postgres
       href: tutorial-python-postgresql-app.md
+    - name: Java med Spring-data
+      href: tutorial-java-spring-cosmosdb.md
     - name: Java Enterprise med Postgres
       href: tutorial-java-enterprise-postgresql-app.md
   - name: App med flera behållare
@@ -246,9 +248,9 @@ items:
         href: ../app-service-web-open-source-technologies-faq.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
       - name: Vanliga frågor och svar om konfiguration och hantering
         href: ../app-service-web-configuration-and-management-faq.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
-ms.openlocfilehash: bccfbf49565b519a279dc77730410f3d9391d5e8
-ms.sourcegitcommit: 345b96d564256bcd3115910e93220c4e4cf827b3
+ms.openlocfilehash: a57f337c783395926d9c454165f5222d0546a784
+ms.sourcegitcommit: 1c1f258c6f32d6280677f899c4bb90b73eac3f2e
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/28/2018
-ms.locfileid: "52498743"
+ms.lasthandoff: 12/11/2018
+ms.locfileid: "53252940"
