--- a/articles/cognitive-services/Bing-News-Search/index.yml
+++ b/articles/cognitive-services/Bing-News-Search/index.yml
@@ -1,14 +1,15 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: aa53bfd0028813479b99e84638eaf6f39dac5008
-ms.sourcegitcommit: 668b486f3d07562b614de91451e50296be3c2e1f
+ms.openlocfilehash: c6b8df95149824f78d9809d14b4b9ebf67728fcb
+ms.sourcegitcommit: 1c1f258c6f32d6280677f899c4bb90b73eac3f2e
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/19/2018
-ms.locfileid: "49456294"
+ms.lasthandoff: 12/11/2018
+ms.locfileid: "53255405"
 documentType: LandingData
-title: Dokumentation om nyhetssökning i Bing
+title: Dokumentation om API för nyhetssökning i Bing
+titleSuffix: Azure Cognitive Services
 metadata:
-  title: Dokumentation om nyhetssökning i Bing – självstudier, snabbstarter, API-referenser | Microsoft Docs
+  title: Dokumentation om API för nyhetssökning i Bing – självstudier, snabbstarter, API-referenser | Microsoft Docs
   description: Lär dig att använda API för nyhetssökning i Bing för att hämta nyheter från webben som är relevanta för användarfrågor. Självstudier visar hur du skapar appar som använder tjänsten.
   services: cognitive-services
   author: mikedodaro
