--- a/articles/cognitive-services/Speech-Service/index.yml
+++ b/articles/cognitive-services/Speech-Service/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 6fa6a0f5a46d8e9a47a0750a66e9ca007864d40a
-ms.sourcegitcommit: 9fb6f44dbdaf9002ac4f411781bf1bd25c191e26
+ms.openlocfilehash: bcd8b3c4b58bc5376815f52888b945f88b5b68ea
+ms.sourcegitcommit: 1c1f258c6f32d6280677f899c4bb90b73eac3f2e
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/08/2018
-ms.locfileid: "53092639"
+ms.lasthandoff: 12/11/2018
+ms.locfileid: "53257734"
 documentType: LandingData
 title: Dokumentation om Speech Services
 metadata:
@@ -185,7 +185,7 @@ sections:
 - title: Exempel
   items:
   - type: paragraph
-    text: 'Hitta exempel på Github för Speech Service:'
+    text: 'Hitta exempel på GitHub för Speech Service:'
   - type: list
     style: unordered
     items:
