--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -80,7 +80,7 @@ items:
       href: consistency-levels.md
     - name: Välja rätt konsekvensnivå
       href: consistency-levels-choosing.md
-    - name: Konsekvensnivåer och API:er för Cosmos DB
+    - name: Konsekvensnivåer och API:er för Azure Cosmos DB
       href: consistency-levels-across-apis.md
     - name: Kompromisser avseende konsekvens, tillgänglighet och prestanda
       href: consistency-levels-tradeoffs.md
@@ -115,7 +115,7 @@ items:
     - name: Arbeta med databaser, containrar och objekt
       href: databases-containers-items.md
     - name: SQL-språkreferens
-      href: sql-api-sql-query-reference.md
+      href: sql-api-query-reference.md
     - name: SQL-frågeexempel
       href: how-to-sql-query.md
     - name: Indexering
@@ -144,6 +144,28 @@ items:
       href: unique-keys.md
     - name: Transaktioner och optimistisk samtidighet
       href: database-transactions-optimistic-concurrency.md
+  - name: Optimera dina kostnader för Azure Cosmos DB
+    items:
+    - name: Prismodell
+      href: how-pricing-works.md
+    - name: Total ägandekostnad (TCO)
+      href: total-cost-ownership.md
+    - name: Förstå fakturan
+      href: understand-your-bill.md
+    - name: Optimera kostnader för etablerat dataflöde
+      href: optimize-cost-throughput.md
+    - name: Optimera kostnader för frågor
+      href: optimize-cost-queries.md
+    - name: Optimera kostnader för lagring
+      href: optimize-cost-storage.md
+    - name: Optimera kostnader för läsningar och skrivningar
+      href: optimize-cost-reads-writes.md
+    - name: Optimera kostnader för flera regioner
+      href: optimize-cost-regions.md
+    - name: Optimera dina utvecklar-/testarbetsbelastningar
+      href: optimize-dev-test.md
+    - name: Förskottsbetalning för reserverad kapacitet
+      href: cosmos-db-reserved-capacity.md
   - name: Säkerhet
     items:
     - name: Översikt
@@ -164,8 +186,6 @@ items:
       href: online-backup-and-restore.md
     - name: Efterlevnad
       href: compliance.md
-  - name: Förskottsbetalning för reserverad kapacitet
-    href: cosmos-db-reserved-capacity.md
 - name: API:er för flera modeller
   items:
   - name: SQL API-dokument
@@ -229,7 +249,7 @@ items:
     - name: Instruktionsguider
       items:
       - name: Justera prestanda för frågor
-        href: sql-api-sql-query-metrics.md
+        href: sql-api-query-metrics.md
       - name: Lagrade procedurer, utlösare och UDF:er
         href: programming.md
       - name: Datatyper
@@ -288,7 +308,7 @@ items:
             href: tutorial-develop-mongodb-nodejs-part3.md
           - name: Del 4 – Skapa ett konto
             href: tutorial-develop-mongodb-nodejs-part4.md
-          - name: Del 5 – Anslut till Cosmos DB
+          - name: Del 5 – Ansluta till Azure Cosmos DB
             href: tutorial-develop-mongodb-nodejs-part5.md
           - name: Del 6 – Utför CRUD-åtgärder
             href: tutorial-develop-mongodb-nodejs-part6.md
@@ -509,7 +529,7 @@ items:
         href: performance-testing.md
     - name: Kostnadseffektiva läsningar och skrivningar
       href: key-value-store-cost.md
-  - name: Visualisera Cosmos DB-data
+  - name: Visualisera Azure Cosmos DB-data
     items:
     - name: Använda Power BI
       href: powerbi-visualize.md
@@ -583,9 +603,9 @@ items:
       href: use-cases.md
     - name: Appar för sociala medier
       href: social-media-apps.md
-ms.openlocfilehash: 413ec7cc09f748948cab92dd10495b667be06f40
-ms.sourcegitcommit: 5d837a7557363424e0183d5f04dcb23a8ff966bb
+ms.openlocfilehash: b172650cc0a69169bcbebf58e0a11d0bb9cd6450
+ms.sourcegitcommit: 1c1f258c6f32d6280677f899c4bb90b73eac3f2e
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/06/2018
-ms.locfileid: "52961237"
+ms.lasthandoff: 12/11/2018
+ms.locfileid: "53254708"
