--- a/articles/event-hubs/TOC.yml
+++ b/articles/event-hubs/TOC.yml
@@ -65,6 +65,8 @@ items:
   - name: Strömma data i Azure Databricks med Event Hubs
     href: ../azure-databricks/databricks-stream-from-eventhubs.md
     maintainContext: true
+  - name: Aktivera integrering av virtuella nätverk och brandväggar på Event Hubs-namnområde
+    href: event-hubs-tutorial-virtual-networks-firewalls.md
   - name: Event Hubs för Apache Kafka
     items:
     - name: Spegla en asynkron Kafka-meddelandekö i en Apache Kafka-aktiverad händelsehubb
@@ -134,7 +136,7 @@ items:
     items:
     - name: Undantag
       href: event-hubs-messaging-exceptions.md
-  - name: Använda IP-filter
+  - name: Använda brandväggar
     href: event-hubs-ip-filtering.md
   - name: Använda tjänstslutpunkter för virtuellt nätverk
     href: event-hubs-service-endpoints.md
@@ -186,9 +188,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-eventhub
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=event-hubs
-ms.openlocfilehash: d6fb88ed6bfcf48cb35da068e50b670f4b1b685c
-ms.sourcegitcommit: 333d4246f62b858e376dcdcda789ecbc0c93cd92
+ms.openlocfilehash: 2ce3523843713bd2e00536922f7bcfeebaa54798
+ms.sourcegitcommit: 7fd404885ecab8ed0c942d81cb889f69ed69a146
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/01/2018
-ms.locfileid: "52726975"
+ms.lasthandoff: 12/12/2018
+ms.locfileid: "53267993"
