--- a/articles/iot-central/TOC.yml
+++ b/articles/iot-central/TOC.yml
@@ -80,6 +80,11 @@ items:
       href: howto-trigger-azure-functions.md
     - name: Exportera dina data
       href: howto-export-data.md
+      items:
+      - name: Exportera till Event Hubs och Service Bus
+        href: howto-export-data-event-hubs-service-bus.md
+      - name: Exportera till Blob Storage
+        href: howto-export-data-blob-storage.md
     - name: Visualisera dina data i Power BI
       href: howto-connect-powerbi.md
     - name: Ansluta andra IoT-moln
@@ -128,9 +133,9 @@ items:
     href: iot-central-customer-data-requests.md
   - name: Webbläsare som stöds
     href: iot-central-supported-browsers.md
-ms.openlocfilehash: 59ca634e96dc1ca47bb4a1c1f550a9fd07317f90
-ms.sourcegitcommit: 2469b30e00cbb25efd98e696b7dbf51253767a05
+ms.openlocfilehash: 691a3c5da906a66d4773ebaf458c3e99e6a03f99
+ms.sourcegitcommit: eb9dd01614b8e95ebc06139c72fa563b25dc6d13
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/06/2018
-ms.locfileid: "52998977"
+ms.lasthandoff: 12/12/2018
+ms.locfileid: "53316326"
