--- a/articles/media-services/latest/index.yml
+++ b/articles/media-services/latest/index.yml
@@ -1,16 +1,16 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 409a5008aa4d25b0fe868956d3da12b47e225acd
-ms.sourcegitcommit: 3a7c1688d1f64ff7f1e68ec4bb799ba8a29a04a8
+ms.openlocfilehash: fdda67921db38b912679d27bf5a8c897775ad82b
+ms.sourcegitcommit: 78ec955e8cdbfa01b0fa9bdd99659b3f64932bba
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/17/2018
-ms.locfileid: "49377854"
+ms.lasthandoff: 12/10/2018
+ms.locfileid: "53137998"
 documentType: LandingData
 title: Dokumentation om Azure Media Services v3
 metadata:
   document_id: 
   title: Dokumentation om Azure Media Services v3 – Självstudier, API-referens | Microsoft Docs
-  meta.description: Learn how to stream on-demand, broadcast live, and analyze your videos with Media Services. Tutorials, API references, and more.
+  description: Lär dig mer om att strömma på begäran, sända live och analysera dina videoklipp med Media Services. Självstudier, API-referenser och mycket annat.
   services: media-services
   author: Juliako
   manager: femila
