--- a/articles/media-services/video-indexer/toc.yml
+++ b/articles/media-services/video-indexer/toc.yml
@@ -17,8 +17,16 @@ items:
 - name: Begrepp
   href: video-indexer-concepts.md
   items:
-  - name: Jämföra VI- och AMS-förinställningar
+  - name: Jämföra förinställningar för Video Indexer och Media Services
     href: compare-video-indexer-with-media-services-presets.md
+  - name: Anpassa innehållsmodeller
+    items:
+    - name: Varumärken
+      href: customize-brands-model-overview.md
+    - name: Språk
+      href: customize-language-model-overview.md
+    - name: Person
+      href: customize-person-model-overview.md
 - name: Guider
   items:
   - name: Migrera från v1 till v2
@@ -39,6 +47,26 @@ items:
     href: video-indexer-create-new.md
   - name: Bädda in widgetar i programmet
     href: video-indexer-embed-widgets.md
+  - name: Anpassa innehållsmodeller
+    items:
+    - name: Person
+      items:
+      - name: använda Video Indexer-webbplatsen
+        href: customize-person-model-with-website.md
+      - name: använda Video Indexer-API:et
+        href: customize-person-model-with-api.md
+    - name: Varumärken
+      items:
+      - name: använda Video Indexer-webbplatsen
+        href: customize-brands-model-with-website.md
+      - name: använda Video Indexer-API:et
+        href: customize-brands-model-with-api.md
+    - name: Språk
+      items:
+      - name: använda Video Indexer-webbplatsen
+        href: customize-language-model-with-website.md
+      - name: använda Video Indexer-API:et
+        href: customize-language-model-with-api.md
 - name: Referens
   items:
   - name: Video Indexer-API
@@ -51,9 +79,11 @@ items:
     href: https://azure.microsoft.com/pricing/details/media-services/
   - name: Regional tillgänglighet
     href: https://azure.microsoft.com/regions/services/
-ms.openlocfilehash: 0936678c29ac4ab4e89bcacd746bbcbb88e22c21
-ms.sourcegitcommit: beb4fa5b36e1529408829603f3844e433bea46fe
+  - name: Regioner
+    href: regions.md
+ms.openlocfilehash: 0ede3667a745959b2d58d1ad1f37e36728fcd503
+ms.sourcegitcommit: 7fd404885ecab8ed0c942d81cb889f69ed69a146
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "52290815"
+ms.lasthandoff: 12/12/2018
+ms.locfileid: "53270096"
