--- a/articles/time-series-insights/TOC.yml
+++ b/articles/time-series-insights/TOC.yml
@@ -9,31 +9,31 @@ items:
     href: time-series-insights-update-overview.md
 - name: Snabbstarter
   items:
-  - name: Azure Time Series Insights (Allmänt tillgänglig)
+  - name: Allmän tillgänglighet för Azure Time Series Insights
     items:
     - name: Utforska Time Series Insights
       href: time-series-quickstart.md
-  - name: Azure Time Series Insights (förhandsversion)
+  - name: Förhandsversion av Azure Time Series Insights
     items:
-    - name: Utforska Time Series Insights (förhandsversion)
+    - name: Utforska förhandsversionen av Time Series Insights
       href: time-series-insights-update-quickstart.md
 - name: Självstudier
   items:
-  - name: Utforska TSI JavaScript-klientbibliotek
+  - name: Utforska JavaScript-klientbiblioteket i Time Series Insights
     href: tutorial-explore-js-client-lib.md
-  - name: Skapa en TSI-webbapp med en sida
+  - name: Skapa en enkelsidig Time Series Insights-webbapp
     href: tutorial-create-tsi-sample-spa.md
-  - name: Azure Time Series Insights (Allmänt tillgänglig)
+  - name: Allmän tillgänglighet för Azure Time Series Insights
     items:
-    - name: Skapa en TSI-miljö
+    - name: Skapa en Time Series Insights-miljö
       href: tutorial-create-populate-tsi-environment.md
-  - name: Azure Time Series Insights (förhandsversion)
+  - name: Förhandsversion av Azure Time Series Insights
     items:
-    - name: Azure TSI (förhandsversion) – självstudie
+    - name: Självstudie om förhandsversionen av Azure Time Series Insights
       href: time-series-insights-update-create-environment.md
 - name: Begrepp
   items:
-  - name: Azure Time Series Insights (Allmänt tillgänglig)
+  - name: Allmän tillgänglighet för Azure Time Series Insights
     items:
     - name: Om Time Series Insights
       href: time-series-insights-overview.md
@@ -43,7 +43,7 @@ items:
       href: time-series-insights-explorer.md
     - name: Förstå datakvarhållning
       href: time-series-insights-concepts-retention.md
-  - name: Azure Time Series Insights (förhandsversion)
+  - name: Förhandsversion av Azure Time Series Insights
     items:
     - name: Planera din miljö
       href: time-series-insights-update-plan.md
@@ -61,7 +61,7 @@ items:
     items:
     - name: Autentisera och auktorisera
       href: time-series-insights-authentication-and-authorization.md
-    - name: Fråga data med C#
+    - name: Fråga data med hjälp av C#
       href: time-series-insights-query-data-csharp.md
     - name: Hantera referensdata med C#
       href: time-series-insights-manage-reference-data-csharp.md
@@ -71,13 +71,13 @@ items:
   items:
   - name: Bevilja åtkomst till data
     href: time-series-insights-data-access.md
-  - name: Ansluta till Event Hub
+  - name: Ansluta till Event Hubs
     href: time-series-insights-how-to-add-an-event-source-eventhub.md
   - name: Ansluta till IoT Hub
     href: time-series-insights-how-to-add-an-event-source-iothub.md
   - name: Hantera resurser med hjälp av mallar
     href: time-series-insights-manage-resources-using-azure-resource-manager-template.md
-  - name: Azure Time Series Insights (Allmänt tillgänglig)
+  - name: Allmän tillgänglighet för Azure Time Series Insights
     items:
     - name: Skapa en miljö
       href: time-series-insights-get-started.md
@@ -95,8 +95,10 @@ items:
       href: time-series-insights-environment-mitigate-latency.md
     - name: Diagnostisera och felsöka
       href: time-series-insights-diagnose-and-solve-problems.md
-  - name: Azure Time Series Insights (förhandsversion)
+  - name: Förhandsversion av Azure Time Series Insights
     items:
+    - name: Etablera och hantera
+      href: time-series-insights-update-how-to-manage.md
     - name: Välj ett Time Series-ID
       href: time-series-insights-update-how-to-id.md
     - name: Diagnostisera och felsöka
@@ -109,7 +111,7 @@ items:
   items:
   - name: Time Series Insights
     items:
-    - name: Azure Time Series Insights (Allmänt tillgänglig)
+    - name: Allmän tillgänglighet för Azure Time Series Insights
       href: /rest/api/time-series-insights/ga
       items:
       - name: Söka i data
@@ -121,7 +123,7 @@ items:
           href: /rest/api/time-series-insights/ga-query-syntax
       - name: API för referensdata
         href: /rest/api/time-series-insights/ga-reference-data-api
-    - name: Azure Time Series Insights (förhandsversion)
+    - name: Förhandsversion av Azure Time Series Insights
       href: /rest/api/time-series-insights/preview
       items:
       - name: Time Series-fråga
@@ -180,9 +182,9 @@ items:
     href: https://azure.microsoft.com/support/options/
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=time-series-insights
-ms.openlocfilehash: c75c034e0f54b33e28aa7f0ef5d0c18ad0004e55
-ms.sourcegitcommit: 2bb46e5b3bcadc0a21f39072b981a3d357559191
+ms.openlocfilehash: 3ae33ba02eb21c748fcea541f3eecff689fb2e8e
+ms.sourcegitcommit: 1c1f258c6f32d6280677f899c4bb90b73eac3f2e
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/05/2018
-ms.locfileid: "52889999"
+ms.lasthandoff: 12/11/2018
+ms.locfileid: "53250645"
