--- a/articles/cognitive-services/Content-Moderator/toc.yml
+++ b/articles/cognitive-services/Content-Moderator/toc.yml
@@ -20,6 +20,10 @@ items:
       items:
       - name: Analysera textinnehåll
         href: text-moderation-quickstart-python.md
+- name: Självstudier
+  items:
+  - name: Moderera bilder för e-handel
+    href: ecommerce-retail-catalog-moderation.md
 - name: Begrepp
   items:
   - name: Bildmoderering
@@ -102,8 +106,6 @@ items:
     items:
     - name: Innehållsmoderering på Facebook
       href: facebook-post-moderation.md
-    - name: Bildmoderering för e-handel
-      href: ecommerce-retail-catalog-moderation.md
     - name: Video- och avskriftsmoderering
       href: video-transcript-moderation-review-tutorial-dotnet.md
   - name: Exportera eller ta bort kontodata
@@ -150,9 +152,9 @@ items:
     href: https://azure.microsoft.com/global-infrastructure/services/
   - name: Azure-översikt
     href: https://azure.microsoft.com/global-infrastructure/services/?products=cognitive-services
-ms.openlocfilehash: 825aafe7980713fbb07499475cb4c8456873f1fe
-ms.sourcegitcommit: 9fb6f44dbdaf9002ac4f411781bf1bd25c191e26
+ms.openlocfilehash: 15d3fb94c30783cd6a620b9c53ed2e31369e5d00
+ms.sourcegitcommit: 71ee622bdba6e24db4d7ce92107b1ef1a4fa2600
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/08/2018
-ms.locfileid: "53106183"
+ms.lasthandoff: 12/17/2018
+ms.locfileid: "53540358"
