--- a/articles/cosmos-db/index.yml
+++ b/articles/cosmos-db/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: c3e825daa7abded8a1e614ab121eda7e60704f73
-ms.sourcegitcommit: 9fb6f44dbdaf9002ac4f411781bf1bd25c191e26
+ms.openlocfilehash: 7fa266039b64721912277b73cd5cae5e750c9bf5
+ms.sourcegitcommit: b767a6a118bca386ac6de93ea38f1cc457bb3e4e
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/08/2018
-ms.locfileid: "53106030"
+ms.lasthandoff: 12/18/2018
+ms.locfileid: "53556670"
 documentType: LandingData
 title: Dokumentation om Azure Cosmos DB
 metadata:
@@ -44,27 +44,27 @@ sections:
       html: <p>Använd SQL-API om du skapar en ny databas för icke-relationella dokumentet och vill köra frågor med välbekant SQL-syntax.</p>
       image:
         src: media/index/sql-api.svg
-      title: API för SQL
+      title: API för Azure Cosmos DB för SQL
     - href: /azure/cosmos-db/graph-introduction/
       html: <p>Använd Gremlin-API om du skapar en grafdatabas för att modellera och bläddra bland relationerna mellan entiteter.</p>
       image:
         src: media/index/graph-api.svg
-      title: Gremlin-API
+      title: API för Azure Cosmos DB för Gremlin
     - href: /azure/cosmos-db/mongodb-introduction/
-      html: <p>Använd MongoDB-API om du migrerar data från en MongoDB-databas till en helt hanterad tjänst i en Azure Cosmos-databas.</p>
+      html: <p>Använd API:et för Azure Cosmos DB för MongoDB om du migrerar data från en MongoDB-databas till en helt hanterad tjänst i en Azure Cosmos-databas.</p>
       image:
         src: media/index/mongodb-api.svg
-      title: MongoDB-API
+      title: API för Azure Cosmos DB för MongoDB
     - href: /azure/cosmos-db/table-introduction/
       html: <p>Använd tabell-API om du migrerar data från Azure Table Storage till permium-tabellerbjudandet i Azure Cosmos DB.</p>
       image:
         src: media/index/table-api.svg
-      title: Tabell-API
+      title: API för Azure Cosmos DB för Table
     - href: /azure/cosmos-db/cassandra-introduction/
       html: <p>Använd API för Cassandra om du migrerar data från Cassandra till en helt hanterad tjänst i en Azure Cosmos-databas.</p>
       image:
         src: media/index/cassandra-api.png
-      title: Cassandra-API
+      title: API för Azure Cosmos DB för Cassandra
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
@@ -94,7 +94,7 @@ sections:
         src: media/index/logo_xamarin.svg
       title: Xamarin
     rows:
-    - title: API för SQL
+    - title: API för Azure Cosmos DB för SQL
       values:
       - href: /azure/cosmos-db/create-sql-api-java
       - href: /azure/cosmos-db/create-sql-api-dotnet
@@ -103,7 +103,7 @@ sections:
       - href: 
       - href: 
       - href: /azure/cosmos-db/create-sql-api-xamarin-dotnet
-    - title: MongoDB-API
+    - title: API för Azure Cosmos DB för MongoDB
       values:
       - href: /azure/cosmos-db/create-mongodb-java
       - href: /azure/cosmos-db/create-mongodb-dotnet
@@ -112,7 +112,7 @@ sections:
       - href: 
       - href: /azure/cosmos-db/create-mongodb-golang
       - href: /azure/cosmos-db/create-mongodb-xamarin
-    - title: Gremlin-API
+    - title: API för Azure Cosmos DB för Gremlin
       values:
       - href: /azure/cosmos-db/create-graph-java
       - href: /azure/cosmos-db/create-graph-dotnet
@@ -121,7 +121,7 @@ sections:
       - href: /azure/cosmos-db/create-graph-gremlin-console
       - href: 
       - href: 
-    - title: Tabell-API
+    - title: API för Azure Cosmos DB för Table
       values:
       - href: /azure/cosmos-db/create-table-java
       - href: /azure/cosmos-db/create-table-dotnet
@@ -130,7 +130,7 @@ sections:
       - href: 
       - href: 
       - href: 
-    - title: Cassandra-API
+    - title: API för Azure Cosmos DB för Cassandra
       values:
       - href: /azure/cosmos-db/create-cassandra-java
       - href: /azure/cosmos-db/create-cassandra-dotnet
@@ -181,13 +181,13 @@ sections:
     style: cards
     className: cardsD
     items:
-    - title: API för SQL
+    - title: API för Azure Cosmos DB för SQL
       html: <p><a href="/rest/api/cosmos-db/">REST</a></p><p><a href="https://aka.ms/acdbnetref">NET</a></p><p><a href="sql-api-sdk-dotnet-changefeed">.NET-ändringsfeed</a></p><p><a href="https://aka.ms/acdbnetcoreref">.NET Core</a></p><p><a href="https://aka.ms/acdbnoderef">Node.js</a></p><p><a href="https://aka.ms/acdbjavaref">Java</a></p><p><a href="https://aka.ms/acdbpythonref">Python</a></p><p><a href="/rest/api/cosmos-db-resource-provider/">REST-resursprovider</a></p><p><a href="sql-api-sql-query-reference">SQL</a></p>
-    - title: MongoDB-API
+    - title: API för Azure Cosmos DB för MongoDB
       html: <p><a href="https://docs.mongodb.com/manual/reference/mongodb-wire-protocol/">Trådprotokoll</a></p><p><a href="https://mongodb.github.io/node-mongodb-native/ ">Node.js</a></p><p><a href="https://docs.mongodb.com/ecosystem/drivers/csharp/">C#</a></p><p><a href="https://docs.mongodb.com/ecosystem/drivers/java/">Java</a></p><p><a href="https://docs.mongodb.com/ecosystem/drivers/python/">Python</a></p><p><a href="https://docs.mongodb.com/ruby-driver/master/">Ruby</a></p>
-    - title: Tabell-API
+    - title: API för Azure Cosmos DB för Table
       html: <p><a href="/rest/api/storageservices/fileservices/Table-Service-Concepts">REST</a></p><p><a href="/azure/cosmos-db/table-sdk-dotnet">NET</a></p><p><a href="/azure/cosmos-db/table-sdk-nodejs">Node.js</a></p><p><a href="/azure/cosmos-db/table-sdk-java">Java</a></p><p><a href="/azure/cosmos-db/table-sdk-python">Python</a></p>
-    - title: Gremlin-API
+    - title: API för Azure Cosmos DB för Gremlin
       html: <p><a href="https://tinkerpop.apache.org/docs/current/reference/">Gremlin</a></p><p><a href="/azure/cosmos-db/graph-sdk-dotnet">NET</a></p><p><a href="https://github.com/ZEROFAIL/goblin">Python</a></p><p><a href="https://tinkerpop.apache.org/docs/current/reference/#connecting-via-java">Java</a></p><p><a href="https://github.com/jbmusso/gremlin-javascript">JavaScript</a></p>
-    - title: Cassandra-API
+    - title: API för Azure Cosmos DB för Cassandra
       html: <p><a href="https://github.com/datastax/nodejs-driver">Node.js</a></p><p><a href="https://github.com/datastax/python-driver">Python</a></p><p><a href="https://github.com/datastax/java-driver">Java</a></p>
