--- a/articles/databox/TOC.yml
+++ b/articles/databox/TOC.yml
@@ -19,8 +19,14 @@ items:
         href: data-box-deploy-ordered.md
       - name: 2 – Konfigurera
         href: data-box-deploy-set-up.md
-      - name: 3 – Kopiera data
-        href: data-box-deploy-copy-data.md
+      - name: 3 – Anslut och kopiera
+        items:
+        - name: Via SMB
+          href: data-box-deploy-copy-data.md
+        - name: Via NFS
+          href: data-box-deploy-copy-data-via-nfs.md
+        - name: Via REST
+          href: data-box-deploy-copy-data-via-rest.md
       - name: 4 – Returnera, ladda upp, bekräfta
         href: data-box-deploy-picked-up.md
     - name: Begrepp
@@ -28,7 +34,11 @@ items:
       - name: Läsa riktlinjer för säkerhet
         href: data-box-safety.md
       - name: Granska krav
-        href: data-box-system-requirements.md
+        items:
+        - name: För Data Box
+          href: data-box-system-requirements.md
+        - name: För Data Box Blob Storage
+          href: data-box-system-requirements-rest.md
       - name: Förstå begränsningar
         href: data-box-limits.md
       - name: Granska säkerhet
@@ -98,9 +108,9 @@ items:
       href: https://azure.microsoft.com/pricing/details/storage/databox/
     - name: Data Box Disk-prissättning
       href: https://azure.microsoft.com/pricing/details/storage/databox/disk/
-ms.openlocfilehash: bd23df1abd99ba3fd89a4b382c6c5f00c8b80f1f
-ms.sourcegitcommit: ae45eacd213bc008e144b2df1b1d73b1acbbaa4c
+ms.openlocfilehash: 4ca0a1e04f558396cb72b0617c9bee6349a0fe54
+ms.sourcegitcommit: 71ee622bdba6e24db4d7ce92107b1ef1a4fa2600
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/01/2018
-ms.locfileid: "50739200"
+ms.lasthandoff: 12/17/2018
+ms.locfileid: "53540528"
