--- a/articles/iot-accelerators/toc.yml
+++ b/articles/iot-accelerators/toc.yml
@@ -2,24 +2,26 @@ items:
 - name: Grunderna i Azure IoT
   href: ../iot-fundamentals/index.yml
 - name: Dokumentation för IoT-lösningsacceleratorer
-  href: index.yml
+  href: index.md
 - name: Översikt
   items:
   - name: Vad är Azure IoT-lösningsacceleratorer?
     href: about-iot-accelerators.md
-- name: Snabbstarter
+  - name: AzureIoTSolution.com
+    href: iot-accelerators-permissions.md
+  expanded: true
+- name: Fjärrövervakning
   items:
-  - name: Testa en fjärrövervakningslösning
-    href: quickstart-remote-monitoring-deploy.md
-  - name: Testa en lösning för ansluten fabrik
-    href: quickstart-connected-factory-deploy.md
-  - name: Testa en lösning för förutsägande underhåll
-    href: quickstart-predictive-maintenance-deploy.md
-  - name: Testa en enhetssimuleringslösning
-    href: quickstart-device-simulation-deploy.md
-- name: Självstudier
-  items:
-  - name: Fjärrövervakning
+  - name: Översikt
+    href: iot-accelerators-remote-monitoring-sample-walkthrough.md
+    items:
+    - name: Val av arkitektur
+      href: iot-accelerators-remote-monitoring-architectural-choices.md
+  - name: Snabbstarter
+    items:
+    - name: Testa en fjärrövervakningslösning
+      href: quickstart-remote-monitoring-deploy.md
+  - name: Självstudier
     items:
     - name: Övervaka IoT-enheter
       href: iot-accelerators-remote-monitoring-monitor.md
@@ -35,38 +37,16 @@ items:
       href: iot-accelerators-remote-monitoring-bulk-configuration-update.md
     - name: Identifiera avvikelser vid gränsen
       href: iot-accelerators-remote-monitoring-edge.md
-  - name: Enhetssimulering
+  - name: Instruktionsguider
     items:
-    - name: Skapa och köra en simulering
-      href: iot-accelerators-device-simulation-create-simulation.md
-    - name: Skapa en anpassad simulerad enhet
-      href: iot-accelerators-device-simulation-create-custom-device.md
-- name: Begrepp
-  items:
-  - name: Fjärrövervakning
-    href: iot-accelerators-remote-monitoring-sample-walkthrough.md
-    items:
-    - name: Val av arkitektur
-      href: iot-accelerators-remote-monitoring-architectural-choices.md
-    - name: Schema för enhetsmodell
-      href: iot-accelerators-remote-monitoring-device-schema.md
-    - name: Beteende för enhetsmodell
-      href: iot-accelerators-remote-monitoring-device-behavior.md
-  - name: Förutsägande underhåll
-    href: iot-accelerators-predictive-walkthrough.md
-  - name: Ansluten fabrik
-    href: iot-accelerators-connected-factory-features.md
-    items:
-    - name: Arkitektur
-      href: iot-accelerators-connected-factory-sample-walkthrough.md
-  - name: Enhetssimulering
-    href: iot-accelerators-device-simulation-overview.md
-  - name: Behörigheter på azureiotsolutions.com
-    href: iot-accelerators-permissions.md
-- name: Instruktionsguider
-  items:
-  - name: Fjärrövervakning
-    items:
+    - name: Distribuera lösning
+      items:
+      - name: Distribuera användningen av CLI
+        href: iot-accelerators-remote-monitoring-deploy-cli.md
+      - name: Distribuera lokalt med Visual Studio
+        href: iot-accelerators-remote-monitoring-deploy-local.md
+      - name: Distribuera lokalt med Docker
+        href: iot-accelerators-remote-monitoring-deploy-local-docker.md
     - name: Ansluta en fysisk enhet
       items:
       - name: C i Windows
@@ -81,18 +61,12 @@ items:
         href: iot-accelerators-connecting-pi-node.md
       - name: MXChip IoT DevKit
         href: iot-accelerators-arduino-iot-devkit-az3166-devkit-remote-monitoringv2.md
-    - name: Lägga till en IoT Edge-enhet
-      href: iot-accelerators-remote-monitoring-add-edge-device.md
-    - name: Importera ett IoT Edge-paket
-      href: iot-accelerators-remote-monitoring-import-edge-package.md
-    - name: Importera paket för automatisk enhetshantering
-      href: iot-accelerators-remote-monitoring-import-adm-package.md
-    - name: Integrera SIM-data
-      href: iot-accelerators-remote-monitoring-telefonica-sim.md
-    - name: Skapa en simulerad enhet
-      href: iot-accelerators-remote-monitoring-create-simulated-device.md
-    - name: Distribuera en simulerad enhet
-      href: iot-accelerators-remote-monitoring-deploy-simulated-device.md
+    - name: Simulera en enhet
+      items:
+      - name: Skapa en simulerad enhet
+        href: iot-accelerators-remote-monitoring-create-simulated-device.md
+      - name: Distribuera en simulerad enhet
+        href: iot-accelerators-remote-monitoring-deploy-simulated-device.md
     - name: Anpassa användargränssnittet
       href: iot-accelerators-remote-monitoring-customize.md
       items:
@@ -108,28 +82,62 @@ items:
         href: iot-accelerators-remote-monitoring-customize-panel.md
     - name: Anpassa och distribuera om en mikrotjänst
       href: iot-accelerators-microservices-example.md
-    - name: Distribuera användningen av CLI
-      href: iot-accelerators-remote-monitoring-deploy-cli.md
-    - name: Distribuera lokalt
-      href: iot-accelerators-remote-monitoring-deploy-local.md
+    - name: Importera konfigurationspaketet för enheter
+      href: iot-accelerators-remote-monitoring-import-adm-package.md
+    - name: Ansluta IoT Edge-enheter
       items:
-      - name: Visual Studio
-        href: iot-accelerators-remote-monitoring-deploy-local.md
-      - name: Docker
-        href: iot-accelerators-remote-monitoring-deploy-local-docker.md
-    - name: E-poståtgärder
+      - name: Lägga till en IoT Edge-enhet
+        href: iot-accelerators-remote-monitoring-add-edge-device.md
+      - name: Importera ett IoT Edge-paket
+        href: iot-accelerators-remote-monitoring-import-edge-package.md
+    - name: Konfigurera e-poståtgärder
       href: iot-accelerators-remote-monitoring-email-actions.md
-    - name: Visualisera telemetri med PowerBI
-      href: iot-accelerators-integrate-data-powerbi.md
-    - name: Integrera Azure Time Series Insights med fjärrövervakning
-      href: iot-accelerators-remote-monitoring-integrate-time-series-insights.md
-    - name: Analysera telemetri med Data Lake
-      href: iot-accelerators-integrate-data-lake.md
-    - name: Konfigurera rollbaserad åtkomstkontroll
+    - name: Konfigurera åtkomstkontroller
       href: iot-accelerators-remote-monitoring-rbac.md
-    - name: Ge åtkomst till telemetriutforskare
-      href: iot-accelerators-remote-monitoring-rbac-tsi.md
-  - name: Ansluten fabrik
+    - name: Utforska telemetri
+      items:
+      - name: Visualisera telemetri med PowerBI
+        href: iot-accelerators-integrate-data-powerbi.md
+      - name: Integrera Azure Time Series Insights med fjärrövervakning
+        href: iot-accelerators-remote-monitoring-integrate-time-series-insights.md
+      - name: Analysera telemetri med Data Lake
+        href: iot-accelerators-integrate-data-lake.md
+      - name: Ge åtkomst till telemetriutforskare
+        href: iot-accelerators-remote-monitoring-rbac-tsi.md
+    - name: Integrera SIM-data
+      href: iot-accelerators-remote-monitoring-telefonica-sim.md
+  - name: Referens
+    items:
+    - name: Schema för enhetsmodell
+      href: iot-accelerators-remote-monitoring-device-schema.md
+    - name: Beteende för enhetsmodell
+      href: iot-accelerators-remote-monitoring-device-behavior.md
+  - name: Resurser
+    items:
+    - name: Referensguide för utvecklare (.NET)
+      href: https://github.com/Azure/azure-iot-pcs-remote-monitoring-dotnet/wiki/Developer-Reference-Guide
+    - name: Referensguide för utvecklare (Java)
+      href: https://github.com/Azure/azure-iot-pcs-remote-monitoring-java/wiki/Developer-Reference-Guide
+    - name: Felsökningsguide för utvecklare
+      href: https://github.com/Azure/azure-iot-pcs-remote-monitoring-dotnet/wiki/Developer-Troubleshooting-Guide
+    - name: GitHub-lagringsplats (.NET)
+      href: https://github.com/Azure/azure-iot-pcs-remote-monitoring-dotnet
+    - name: GitHub-lagringsplats (Java)
+      href: https://github.com/Azure/azure-iot-pcs-remote-monitoring-java
+    - name: Vanliga frågor och svar om fjärrövervakning
+      href: iot-accelerators-faq-rm-v2.md
+- name: Ansluten fabrik
+  items:
+  - name: Översikt
+    href: iot-accelerators-connected-factory-features.md
+    items:
+    - name: Arkitektur
+      href: iot-accelerators-connected-factory-sample-walkthrough.md
+  - name: Snabbstarter
+    items:
+    - name: Testa en lösning för ansluten fabrik
+      href: quickstart-connected-factory-deploy.md
+  - name: Instruktionsguider
     items:
     - name: Använd instrumentpanelen
       href: iot-accelerators-connected-factory-dashboard.md
@@ -141,7 +149,27 @@ items:
       href: iot-accelerators-connected-factory-configure.md
     - name: Anpassa lösningsacceleratorn
       href: iot-accelerators-connected-factory-customize.md
-  - name: Enhetssimulering
+  - name: Resurser
+    items:
+    - name: GitHub-lagringsplats
+      href: https://github.com/Azure/azure-iot-connected-factory
+    - name: Vanliga frågor och svar om ansluten fabrik
+      href: iot-accelerators-faq-cf.md
+- name: Enhetssimulering
+  items:
+  - name: Översikt
+    href: iot-accelerators-device-simulation-overview.md
+  - name: Snabbstarter
+    items:
+    - name: Testa en enhetssimuleringslösning
+      href: quickstart-device-simulation-deploy.md
+  - name: Självstudier
+    items:
+    - name: Skapa och köra en simulering
+      href: iot-accelerators-device-simulation-create-simulation.md
+    - name: Skapa en anpassad simulerad enhet
+      href: iot-accelerators-device-simulation-create-custom-device.md
+  - name: Instruktionsguider
     items:
     - name: Använd en befintlig IoT Hub
       href: iot-accelerators-device-simulation-choose-hub.md
@@ -153,28 +181,38 @@ items:
       href: iot-accelerators-device-simulation-protobuf.md
     - name: Distribuera en anpassad Docker-avbildning
       href: iot-accelerators-device-simulation-deploy-image.md
-- name: Referens
-  items:
-  - name: Fjärrövervakning
-    items:
-    - name: Referensguide för utvecklare
-      href: https://github.com/Azure/azure-iot-pcs-remote-monitoring-dotnet/wiki/Developer-Reference-Guide
-    - name: Felsökningsguide för utvecklare
-      href: https://github.com/Azure/azure-iot-pcs-remote-monitoring-dotnet/wiki/Developer-Troubleshooting-Guide
-  - name: Enhetssimulering
+  - name: Resurser
     items:
     - name: Referensguide för utvecklare
       href: https://github.com/Azure/device-simulation-dotnet/wiki/Simulation-Service-Developer-Reference-Guide
-  - name: Säkerhet
+    - name: GitHub-lagringsplats
+      href: https://github.com/Azure/device-simulation-dotnet
+- name: Förutsägande underhåll
+  items:
+  - name: Översikt
+    href: iot-accelerators-predictive-walkthrough.md
+  - name: Snabbstarter
     items:
-    - name: Säkerhetsarkitektur
-      href: /azure/iot-fundamentals/iot-security-architecture?context=azure/iot-accelerators/rc/rc
-    - name: Metodtips för säkerhet
-      href: /azure/iot-fundamentals/iot-security-best-practices?context=azure/iot-accelerators/rc/rc
-    - name: Skydda distributionen av IoT
-      href: /azure/iot-fundamentals/iot-security-deployment?context=azure/iot-accelerators/rc/rc
-    - name: Säkerhet från grunden
-      href: /azure/iot-fundamentals/iot-security-ground-up?context=azure/iot-accelerators/rc/rc
+    - name: Testa en lösning för förutsägande underhåll
+      href: quickstart-predictive-maintenance-deploy.md
+  - name: Resurser
+    items:
+    - name: GitHub-lagringsplats
+      href: https://github.com/Azure/azure-iot-predictive-maintenance
+- name: Referensarkitektur
+  items:
+  - name: Översikt
+    href: iot-accelerators-architecture-overview.md
+  - name: Ladda ned
+    href: https://aka.ms/iotrefarchitecture
+  - name: Partnerimplementeringar
+    items:
+    - name: Intel Connected Logistics Platform
+      href: https://www.azureiotsolutions.com/Accelerators#description/intel-connected-logistics-platform
+    - name: Edge Dynamometer Analysis
+      href: https://www.azureiotsolutions.com/Accelerators#description/edge-dynamometer-analysis
+    - name: Digital Signage Solution
+      href: https://www.azureiotsolutions.com/Accelerators#description/digital-signage-solution
 - name: Relaterat
   items:
   - name: Lösningar
@@ -209,31 +247,17 @@ items:
     href: /azure/machine-learning/
 - name: Resurser
   items:
-  - name: GitHub-lagringsplatser
-    items:
-    - name: Fjärrövervakning (.NET)
-      href: https://github.com/Azure/azure-iot-pcs-remote-monitoring-dotnet
-    - name: Fjärrövervakning (Java)
-      href: https://github.com/Azure/azure-iot-pcs-remote-monitoring-java
-    - name: Ansluten fabrik
-      href: https://github.com/Azure/azure-iot-connected-factory
-    - name: Förutsägande underhåll
-      href: https://github.com/Azure/azure-iot-predictive-maintenance
-    - name: Enhetssimulering
-      href: https://github.com/Azure/device-simulation-dotnet
   - name: Azure-översikt
     href: https://azure.microsoft.com/roadmap/
   - name: VANLIGA FRÅGOR OCH SVAR
     href: iot-accelerators-faq.md
-  - name: Vanliga frågor och svar om fjärrövervakning
-    href: iot-accelerators-faq-rm-v2.md
-  - name: Vanliga frågor och svar om ansluten fabrik
-    href: iot-accelerators-faq-cf.md
   - name: Stack Overflow
     href: https://stackoverflow.com/questions/tagged/azure-iot-suite
-ms.openlocfilehash: 87c98a22ae0f62908a0fff44921206a32b27e2c2
-ms.sourcegitcommit: edacc2024b78d9c7450aaf7c50095807acf25fb6
+  - name: Fjärrövervakning V1
+    href: https://docs.microsoft.com/previous-versions/azure/iot-suite/
+ms.openlocfilehash: 948cd45c2b971e2d743709b051eb5a36a7e818aa
+ms.sourcegitcommit: b767a6a118bca386ac6de93ea38f1cc457bb3e4e
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/13/2018
-ms.locfileid: "53340665"
+ms.lasthandoff: 12/18/2018
+ms.locfileid: "53554970"
