--- a/articles/security-center/TOC.yml
+++ b/articles/security-center/TOC.yml
@@ -15,8 +15,6 @@ items:
     href: quick-onboard-windows-computer.md
   - name: Linux-datorer
     href: quick-onboard-linux-computer.md
-  - name: Säkerhetslösningar
-    href: quick-security-solutions.md
   expanded: true
 - name: Självstudier
   items:
@@ -30,6 +28,10 @@ items:
     href: security-center-permissions.md
   - name: Datasäkerhet
     href: security-center-data-security.md
+  - name: Incidenthantering
+    href: security-center-incident-response.md
+  - name: Använda rekommendationer för att förbättra säkerheten
+    href: security-center-using-recommendations.md
 - name: Instruktionsguider
   items:
   - name: Förbättra dina säkerhetspoäng
@@ -44,6 +46,10 @@ items:
     href: tutorial-security-policy.md
   - name: Anpassa informationsskyddsprincipen
     href: security-center-info-protection-policy.md
+  - name: Hantera säkerhetslösningar
+    href: security-center-partner-integration.md
+  - name: Automatisera registrering med PowerShell
+    href: security-center-powershell-onboarding.md
   - name: Security Center-inställningar
     href: security-center-policies-overview.md
     items:
@@ -66,50 +72,11 @@ items:
       href: security-center-monitoring.md
     - name: Skydda dina datorer och appar
       href: security-center-virtual-machine-protection.md
-      items:
-      - name: Tillämpa diskkryptering
-        href: security-center-apply-disk-encryption.md
-      - name: Tillämpa systemuppdateringar
-        href: security-center-apply-system-updates.md
-      - name: Aktivera kryptering för lagringskonto
-        href: security-center-enable-encryption-for-storage-account.md
-      - name: Aktivera VM-Agent
-        href: security-center-enable-vm-agent.md
-      - name: Installera slutpunktsskydd
-        href: security-center-install-endpoint-protection.md
-      - name: Starta om datorn efter uppdateringarna
-        href: security-center-apply-system-updates.md#reboot-after-system-updates
-      - name: Åtgärda säkerhetskonfigurationer
-        href: security-center-remediate-os-vulnerabilities.md
-      - name: Uppdatera OS-versionen
-        href: security-center-update-os-version.md
-      - name: Sårbarhetsbedömning inte installerad
-        href: security-center-vulnerability-assessment-recommendations.md
-      - name: Lägg till en brandvägg för webbappar
-        href: security-center-add-web-application-firewall.md
-      - name: Slutföra programskydd
-        href: security-center-add-web-application-firewall.md#finalize-application-protection
     - name: Skydda nätverksresurser
       href: security-center-network-recommendations.md
-      items:
-      - name: Lägg till en nästa generations brandvägg
-        href: security-center-add-next-generation-firewall.md
-      - name: Aktivera nätverkssäkerhetsgrupper
-        href: security-center-enable-network-security-groups.md
-      - name: Begränsa åtkomst via Internet-riktade slutpunkter
-        href: security-center-restrict-access-through-internet-facing-endpoints.md
-      - name: Dirigera trafiken endast via NGFW
-        href: security-center-add-next-generation-firewall.md#route-traffic-through-ngfw-only
     - name: Skydda SQL-tjänsten och data
       href: security-center-sql-service-recommendations.md
-      items:
-      - name: Aktivera granskning och hotidentifiering på SQL-databaser
-        href: security-center-enable-auditing-on-sql-databases.md
-      - name: Aktivera granskning och hotidentifiering på SQL-servrar
-        href: security-center-enable-auditing-on-sql-servers.md
-      - name: Aktivera transparent datakryptering
-        href: security-center-enable-transparent-data-encryption.md
-    - name: Övervaka identitet och åtkomst
+    - name: Skydda identitet och åtkomst
       href: security-center-identity-access.md
   - name: Tillämpa molnskydd
     items:
@@ -119,38 +86,61 @@ items:
       href: security-center-adaptive-application.md
     - name: Övervakning av filintegritet
       href: security-center-file-integrity-monitoring.md
-  - name: Hantera säkerhetslösningar
-    href: security-center-partner-integration.md
-    items:
-    - name: Anslutna lösningar
-      href: security-center-partner-solutions.md
-    - name: Identifierade lösningar
-      href: security-center-partner-integration.md#discovered-solutions
-    - name: Ansluta externa lösningar
-      href: quick-security-solutions.md
-    - name: Ansluta Application Gateway
-      href: security-center-connect-application-gateway.md
-    - name: Ansluta Microsoft ATA
-      href: security-center-ata-integration.md
-    - name: Ansluta Azure AD Identity Protection
-      href: security-center-aadip-integration.md
-    - name: Dataexport till SIEM
-      href: security-center-export-data-to-siem.md
-  - name: Undersöka hot
+  - name: Identifiera hot
     href: security-center-detection-capabilities.md
     items:
     - name: Säkerhetsaviseringar
       href: security-center-managing-and-responding-alerts.md
     - name: Säkerhetsincidenter
       href: security-center-incident.md
-    - name: Hotrapporter
-      href: security-center-threat-report.md
     - name: Aviseringstyper
       href: security-center-alerts-type.md
-    - name: Anpassade aviseringar
-      href: security-center-custom-alert.md
     - name: Aviseringsverifiering
       href: security-center-alert-validation.md
+    - name: UEBA för Azure-resurser och användare
+      href: security-center-ueba-mcas.md
+  - name: Arkiv
+    items:
+    - name: Tillämpa diskkryptering
+      href: security-center-apply-disk-encryption.md
+    - name: Tillämpa systemuppdateringar
+      href: security-center-apply-system-updates.md
+    - name: Aktivera kryptering för lagringskonto
+      href: security-center-enable-encryption-for-storage-account.md
+    - name: Aktivera VM-Agent
+      href: security-center-enable-vm-agent.md
+    - name: Installera slutpunktsskydd
+      href: security-center-install-endpoint-protection.md
+    - name: Starta om datorn efter uppdateringarna
+      href: security-center-apply-system-updates.md#reboot-after-system-updates
+    - name: Åtgärda säkerhetskonfigurationer
+      href: security-center-remediate-os-vulnerabilities.md
+    - name: Uppdatera OS-versionen
+      href: security-center-update-os-version.md
+    - name: Sårbarhetsbedömning inte installerad
+      href: security-center-vulnerability-assessment-recommendations.md
+    - name: Lägg till en brandvägg för webbappar
+      href: security-center-add-web-application-firewall.md
+    - name: Slutföra programskydd
+      href: security-center-add-web-application-firewall.md#finalize-application-protection
+    - name: Lägg till en nästa generations brandvägg
+      href: security-center-add-next-generation-firewall.md
+    - name: Aktivera nätverkssäkerhetsgrupper
+      href: security-center-enable-network-security-groups.md
+    - name: Begränsa åtkomst via Internet-riktade slutpunkter
+      href: security-center-restrict-access-through-internet-facing-endpoints.md
+    - name: Dirigera trafiken endast via NGFW
+      href: security-center-add-next-generation-firewall.md#route-traffic-through-ngfw-only
+    - name: Aktivera granskning och hotidentifiering på SQL-databaser
+      href: security-center-enable-auditing-on-sql-databases.md
+    - name: Aktivera granskning och hotidentifiering på SQL-servrar
+      href: security-center-enable-auditing-on-sql-servers.md
+    - name: Aktivera transparent datakryptering
+      href: security-center-enable-transparent-data-encryption.md
+    - name: Hotrapporter
+      href: security-center-threat-report.md
+    - name: Anpassade aviseringar
+      href: security-center-custom-alert.md
     - name: Förtroendepoäng för avisering
       href: security-center-confidence-score.md
     - name: Säkerhetsvarningsmappning och hotinformation
@@ -159,30 +149,12 @@ items:
       href: security-center-investigation.md
     - name: Hantera användardata för undersökning
       href: security-center-investigation-user-data.md
-    - name: UEBA för Azure-resurser och användare
-      href: security-center-ueba-mcas.md
-  - name: Automatisera säkerhetsarbetsflöden
-    items:
     - name: Logic Apps-spelböcker
       href: security-center-playbooks.md
     - name: Visa händelser
       href: security-center-events-dashboard.md
     - name: Search
       href: security-center-search.md
-    - name: Granska efterlevnad (REST)
-      href: security-center-review-policy-compliance.md
-    - name: Utvärdera prenumerationer (REST)
-      href: security-center-compliance-rest-api.md
-    - name: Automatisera registrering med PowerShell
-      href: security-center-powershell-onboarding.md
-  - name: Scenarier
-    items:
-    - name: Incidenthantering
-      href: security-center-incident-response.md
-    - name: Använda rekommendationer för att förbättra säkerheten
-      href: security-center-using-recommendations.md
-  - name: Felsöka
-    href: security-center-troubleshooting-guide.md
 - name: Referens
   items:
   - name: REST API:er
@@ -213,13 +185,13 @@ items:
     href: https://azure.microsoft.com/documentation/videos/index/?services=security-center
   - name: Prissättning
     href: https://azure.microsoft.com/pricing/details/security-center/
-  - name: Tjänstuppdateringar
-    href: https://azure.microsoft.com/updates/?product=security-center
   - name: Regional tillgänglighet
     href: https://azure.microsoft.com/regions/services/
-ms.openlocfilehash: 28b701fcb85bd8deac5c0442d98730dfb10e8cd2
-ms.sourcegitcommit: edacc2024b78d9c7450aaf7c50095807acf25fb6
+  - name: Felsöka
+    href: security-center-troubleshooting-guide.md
+ms.openlocfilehash: e843dc5b29d441f4d1592a935bd35b295150f861
+ms.sourcegitcommit: 71ee622bdba6e24db4d7ce92107b1ef1a4fa2600
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/13/2018
-ms.locfileid: "53338693"
+ms.lasthandoff: 12/17/2018
+ms.locfileid: "53545509"
